--- a/web/html/home.html
+++ b/web/html/home.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="48x48" href="/icons/favicon.ico">
     <meta name="theme-color" content="#00878f">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'>
-    <script src="/scripts/WebSocket.js" type="text/javascript"></script>    
+    <script src="scripts/root.js" type="text/javascript"></script>    
 </head>
 
 <body>
@@ -16,7 +16,20 @@
     <div class="grid">
 
         <div>  
-            <p><a href="about.html">About</a> </p>
+           <p> <a href="about.html">About</a> </p>
            <p> <a href="https://github.com/mv4wd/RCHourglass">RC Hourglass Project</a> </p>
-           <p><a href="https://github.com/snowblind?tab=repositories">LAPS webapp Project</a></p>
+           <p> <a href="https://github.com/snowblind/LAPS">LAPS webapp Project</a> </p>
         </div>
+        <div>
+            <header><h1>Found Transponders</h1></header>
+            <p></p>
+            <p></p>
+            <div id="tlist"></div>
+        </div>
+            <div>
+                <header><h1>Current stats</h1></header>
+                <p>Not working yet</p>
+            </div>
+        </div>
+    </body>
+</html>
