--- a/web/html/transponder.html
+++ b/web/html/transponder.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"> 
     <title>RC HourGlass LAPS</title>
     <link href='/web/main.css' rel='stylesheet' type='text/css'>
+    <link href='/web/yourstats.css' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" sizes="128x128"  href="/icons/rchourglass_Icon_128x128.ico">
     <link rel="icon" type="image/png" sizes="48x48" href="/icons/favicon.ico">
     <meta name="theme-color" content="#00878f">
@@ -29,9 +30,10 @@
         </div>
             <div>
                 <header><h1>Your stats</h1></header>
-                <div id="pstats">
-                    <p>Fastest lap: 00:00.000</p>
-                </div>
+                <table class="yourstats">
+                    <tbody id="userstats">
+                    </tbody>
+                </table>
             </div>
         </div>
     </body>
